made great progress

--- a/FluidSimulation1/FluidSimulation1/FluidSimulation1.vcxproj.filters
+++ b/FluidSimulation1/FluidSimulation1/FluidSimulation1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Application2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.hpp">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Phisics.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Application2.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
