--- a/FluidSimulation1/FluidSimulation1/FluidSimulation1.vcxproj
+++ b/FluidSimulation1/FluidSimulation1/FluidSimulation1.vcxproj
@@ -135,7 +135,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
-    <ClCompile Include="Application2.cpp" />
     <ClCompile Include="Environment.cpp" />
     <ClCompile Include="InteractionMatrixClass.cpp" />
     <ClCompile Include="main.cpp" />
@@ -144,8 +143,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.hpp" />
-    <ClInclude Include="Application2.hpp" />
     <ClInclude Include="Environment.hpp" />
+    <ClInclude Include="Graphics.hpp" />
     <ClInclude Include="InteractionMatrixClass.hpp" />
     <ClInclude Include="Particle.hpp" />
     <ClInclude Include="Phisics.hpp" />
