--- a/FluidSimulation1/FluidSimulation1/FluidSimulation1.vcxproj.filters
+++ b/FluidSimulation1/FluidSimulation1/FluidSimulation1.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Phisics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Pipe.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Environment.hpp">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Graphics.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Pipe.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
